# otus_cpp_13

./: .travis.yml  CMakeLists.txt  README.md  main.cpp  parser.cpp  parser.h  table.cpp  table.h
tests/: generate_test.sh  i1.txt  i2.txt  input.sh  input.txt
